--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,11 +1,19 @@
 // Global component styles
 
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   position: relative;
   min-height: 100%;
 }
 
 body {
+  font-family: 'GmarketSansMedium';
   height: 100%;
 }
 
