completed jquery-dataTable, 404 NotFound page

--- a/src/scss/navs/_sidebar.scss
+++ b/src/scss/navs/_sidebar.scss
@@ -2,7 +2,7 @@
 
 .sidebar {
     width: $sidebar-collapsed-width;
-    min-height: 100vh;
+    min-height: 100%;
 
     .nav-item {
         position: relative;
