--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -4,7 +4,7 @@
 
 .error {
   color: $gray-800;
-  font-size: 7rem;
+  font-size: 6rem;
   position: relative;
   line-height: 1;
   width: 12.5rem;
@@ -24,10 +24,10 @@
   text-shadow: -1px 0 $red;
   top: 0;
   color: $gray-800;
-  background: $gray-100;
+  background: #FFFF;
   overflow: hidden;
   clip: rect(0,900px,0,0);
-  animation: noise-anim 2s infinite linear alternate-reverse;
+  animation: noise-anim 5s infinite linear alternate-reverse;
 }
 
 @keyframes noise-anim-2 {
@@ -45,8 +45,8 @@
   text-shadow: 1px 0 $blue;
   top: 0;
   color: $gray-800;
-  background: $gray-100;
+  background: #FFFF;
   overflow: hidden;
   clip: rect(0,900px,0,0);
-  animation: noise-anim-2 3s infinite linear alternate-reverse;
+  animation: noise-anim-2 5s infinite linear alternate-reverse;
 }
